--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ node_modules/
 .idea
 lesson2/node_modules
 lesson3/node_modules
+lesson4/node_modules
+lesson5/node_modules
+lesson6/node_modules
+lesson6/.env
