--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,11 @@ lesson3/node_modules
 lesson4/node_modules
 lesson5/node_modules
 lesson6/node_modules
+lesson7/node_modules
+lesson8/node_modules
+lesson9/node_modules
 lesson6/.env
+lesson7/.env
+lesson8/.env
+lesson9/.env
+lesson10/.env
