--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ lesson6/node_modules
 lesson7/node_modules
 lesson8/node_modules
 lesson9/node_modules
+lesson10/node_modules
 lesson6/.env
 lesson7/.env
 lesson8/.env
