--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,12 @@ lesson7/node_modules
 lesson8/node_modules
 lesson9/node_modules
 lesson10/node_modules
+lesson11/node_modules
+lesson12/node_modules
 lesson6/.env
 lesson7/.env
 lesson8/.env
 lesson9/.env
 lesson10/.env
+lesson11/.env
+lesson12/.env
